# GeometryLab

./: CMakeLists.txt  README.md
demo/tetraDemo/: CMakeLists.txt  LayerTetgenDemo.cpp  main.cpp  netgenDemo.cpp  netgenDemo.h  occStepReader.cpp  occStepReader.h  tetgenWrapper.cpp  tetgenWrapper.h
demo/torus/: CMakeLists.txt  GenusN.h  ddm.h  main.cpp
demo/view2d/: CMakeLists.txt  asdf.cpp  asdf.h  main.cpp
engine/algorithms/: CMakeLists.txt  GeoPrimitives.cpp  PInTri.cpp  bfs_mesh.cpp  dijkstra_mesh.cpp  fill_fan.cpp  fill_loop.cpp  fill_p_arch.cpp  fixmobius2d.cpp  fps2mesh.cpp  geometry.h  graph_components.cpp  idx_seg_in_loop.cpp  lcot_colormap.cpp  makeShapes.cpp  map_v2f.cpp  map_v2v.cpp  mergevtx.cpp  morph.cpp  outwards.cpp  removeVtx.cpp  remove_Overlap_Vtx.cpp  remove_narrow.cpp  seed_bnd_loop.cpp  segline.cpp  submesh.cpp  topology.h
engine/cork/: CMakeLists.txt
engine/cork/src/: cork.cpp  cork.h
engine/cork/src/accel/: aabvh.h
engine/cork/src/file_formats/: files.cpp  files.h  ifs.cpp  off.cpp
engine/cork/src/include/: cork.h
engine/cork/src/isct/: absext4.h  empty3d.cpp  empty3d.h  ext4.h  fixext4.h  fixint.h  gmpext4.h  quantization.cpp  quantization.h  triangle.h  unsafeRayTriIsct.h
engine/cork/src/math/: bbox.h  ray.h  vec.h
engine/cork/src/mesh/: mesh.decl.h  mesh.h
engine/cork/src/rawmesh/: rawMesh.h
engine/cork/src/util/: iterPool.h  log.cpp  memPool.h  prelude.h  shortVec.h  timer.cpp  unionFind.h
engine/imgui/: CMakeLists.txt
engine/netgen/: Backupcmake.txt  CMakeLists.txt
engine/netgen/cmake/: NetgenConfig.cmake  SuperBuild.cmake  netgen-targets-release.cmake  netgen-targets.cmake
engine/netgen/external_dependencies/zlib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  example.vcxproj  example.vcxproj.filters  install_manifest.txt  minigzip.vcxproj  minigzip.vcxproj.filters  zlib.sln  zlib.vcxproj  zlib.vcxproj.filters  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
engine/netgen/include/include/: mystdlib.h  netgen_config.hpp  netgen_version.hpp
engine/netgen/include/occ/: occgeom.hpp
engine/netgen/lib/: ngcore.lib  nglib.lib  zlib.lib  zlibstatic.lib
engine/netgen/libsrc/: CMakeLists.txt
engine/netgen/libsrc/core/: CMakeLists.txt  archive.hpp  array.hpp  bitarray.hpp  exception.hpp  flags.hpp  localheap.hpp  logging.hpp  memtracer.hpp  ngcore_api.hpp  ngstream.hpp  paje_trace.cpp  paje_trace.hpp  profiler.hpp  python_ngcore.hpp  table.cpp  table.hpp  taskmanager.hpp  type_traits.hpp  utils.cpp  utils.hpp  version.hpp
engine/netgen/libsrc/csg/: CMakeLists.txt  csgeom.hpp  csgpkg.cpp  genmesh.cpp  identify.hpp  python_csg.cpp  singularref.hpp  specpoin.cpp  specpoin.hpp  splinesurface.hpp  vscsg.cpp
engine/netgen/libsrc/general/: gzstream.cpp  gzstream.h  hashtabl.hpp  mpi_interface.hpp  mystring.hpp  netgenout.hpp  ngbitarray.hpp  optmem.hpp  table.hpp  template.hpp
engine/netgen/libsrc/geom2d/: CMakeLists.txt  csg2d.hpp  genmesh2d.cpp  geom2dpkg.cpp  geometry2d.hpp  python_geom2d.cpp
engine/netgen/libsrc/gprim/: adtree.hpp  geom2d.hpp  geom3d.hpp  geomfuncs.hpp  geomtest3d.hpp  spline.hpp  splinegeometry.hpp
engine/netgen/libsrc/include/: CMakeLists.txt  incopengl.hpp  mydefs.hpp  nginterface.h  nginterface_v2.hpp  nginterface_v2_impl.hpp
engine/netgen/libsrc/interface/: nginterface.cpp  nginterface_v2.cpp  writeOpenFOAM15x.cpp  writeuser.cpp  writeuser.hpp
engine/netgen/libsrc/linalg/: densemat.hpp
engine/netgen/libsrc/meshing/: CMakeLists.txt  basegeom.cpp  basegeom.hpp  bcfunctions.hpp  bisect.hpp  boundarylayer.hpp  curvedelems.hpp  fieldlines.hpp  global.cpp  global.hpp  hprefinement.hpp  improve2.hpp  localh.hpp  meshclass.hpp  meshfunc.hpp  meshfunc2d.cpp  meshing2.hpp  meshtype.cpp  meshtype.hpp  msghandler.hpp  python_mesh.cpp  soldata.hpp  specials.hpp  surfacegeom.hpp  topology.hpp  visual_interface.hpp
engine/netgen/libsrc/occ/: occ_utils.hpp  occgenmesh.cpp  occgeom.cpp  occgeom.hpp  occpkg.cpp  (+3 more)
engine/netgen/netgencmake/: SuperBuild.cmake  netgen-targets.cmake
engine/netgen/ng/: gui.cpp  menustat.tcl  netgenpy.cpp  ngappinit.cpp  ngguipy.cpp  ngpkg.cpp  onetcl.cpp  onetcl.py  parallelfunc.cpp  variables.tcl
engine/netgen/nglib/: CMakeLists.txt  nglib.cpp  nglib.h  nglib_occ.cpp  nglib_occ.h  parallelfunc.cpp
engine/visual/: CMakeLists.txt
engine/visual/include/: IconSet.h  Thing.h  XObject.h  XcyMesh.h  imguiHdl.h  imgui_fonts_droid_sans.h  marker3d.h  mask.h  meshGL.h  picking.h  ui.h  utils.h  viewGL.h  world.h  zoom.h
engine/visual/src/: IconSet.cpp  Thing.cpp  XObject.cpp  imguiHdl.cpp  marker3d.cpp  meshGL.cpp  ui.cpp  utils.cpp  viewGL.cpp  world.cpp  xcyMesh.cpp
src/: CMakeLists.txt  GenusN.cpp  GenusN.h  GraphMesh.cpp  GraphMesh.h  HarmonicDeformation.cpp  HarmonicDeformation.h  LaplacianSmoothing.cpp  LaplacianSmoothing.h  Manifold.cpp  Manifold.h  MeshIO.cpp  MeshIO.h  NTorus.cpp  NTorus.h  VolumeMesh.h  XMesh.cpp  XMesh.h  bezier.cpp  bezier.h  netgenWrapper.cpp  netgenWrapper.h  occStepReader.cpp  occStepReader.h  tetgenWrapper.cpp  tetgenWrapper.h
src/NetgenDemo/: CMakeLists.txt  EigenMeshD.cpp  EigenMeshD.h  main.cpp  netgenDemo.cpp  netgenDemo.h  occStepReader.cpp  test_model_step203.stp  tetgenWrapper.cpp  tetgenWrapper.h
src/csg/: CMakeLists.txt
src/discreteDomain/: CMakeLists.txt  main.cpp
src/flip_geodesic/: CMakeLists.txt  FGproc.cpp  FGproc.h
src/occSTEP/: CMakeLists.txt  EigenMeshD.cpp  GlfwOcctView.cpp  GlfwOcctView.h  main.cpp  out.stl
src/tetraDemo/: CMakeLists.txt  EigenMeshD.cpp  EigenMeshD.h  main.cpp  netgenDemo.cpp  netgenDemo.h  occStepReader.h  tetgenWrapper.cpp  tetgenWrapper.h
src/torus/: CMakeLists.txt  EigenMeshD.cpp  EigenMeshD.h  GenusN.cpp  GenusN.h  Manifold.cpp  Manifold.h  XMesh.cpp  XMesh.h  main.cpp
src/vector_heat/: CMakeLists.txt  vectorHeat.h
src/visual_debugger/: CMakeLists.txt  visual_debugger.cpp  visual_debugger.h
(+287 files in other folders)
