add_subdirectory(core)
add_subdirectory(general)
add_subdirectory(gprim)
add_subdirectory(linalg)
add_subdirectory(include)
add_subdirectory(meshing)
if(USE_OCC)
    add_subdirectory(occ)
endif(USE_OCC)
add_subdirectory(stlgeom)
add_subdirectory(interface)
add_subdirectory(csg)
add_subdirectory(geom2d)


